<resources>
    <string name="app_name">Littera</string>
    <string name="btnRegister">Register</string>
    <string name="login">Login</string>
    <string name="Enteremail">Enter email</string>
    <string name="Enterpassword">Enter password</string>
    <string name="enterUsername">Enter username</string>
    <string name="retypePass">Retype password</string>
    <string name="Next">Next</string>
    <string name="createAccount">Create account</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="createnewaccount">Create new account</string>
    <string name="accountsettings">Account Settings</string>
    <string name="changeimage">Change image</string>
    <string name="changestatus">Change status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
